--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tailwindcss -i ./input.css -o ./dist/output.css --watch",
-    "build":"npx tailwindcss -i ./input.css -o ./dist/output.css"
+    "start": "npx tailwindcss -i ./input.css -o ./dist/output.css --watch --minify",
+    "build": "npx tailwindcss -i ./input.css -o ./dist/output.css"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,5 @@
   "devDependencies": {
     "tailwindcss": "^3.4.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
