--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx tailwindcss -i ./input.css -o ./dist/output.css --watch --minify",
-    "build": "npx tailwindcss -i ./input.css -o ./dist/output.css"
+    "build": "npx tailwindcss -i ./input.css -o ./dist/output.css --minify"
   },
   "keywords": [],
   "author": "",
